milestone API, move to query function
